@@ -5,6 +5,7 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
@@ -21,7 +22,7 @@ public class SpringAzureMessageDemoApplication {
 
 	@GetMapping("/list")
 	List<String> listOfFruit(){
-		List<String> list = List.of("Banana","Mango","Apple","Orange");
+		List<String> list = Arrays.asList("Banana","Mango","Apple","Orange");
 		return list;
 	}
 }
